--- a/khb2026/submit.html
+++ b/khb2026/submit.html
@@ -14,9 +14,7 @@
         <div id="form">
             <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfZNCzbTuJtXr1P0_Qb-Luii1IOVjQdGYUgpyqkdp8YxjcvbQ/formResponse?embedded=true"
             method="POST"
-            target="hidden_iframe"
-            onsubmit="submitted=true;"
-            class="submitform">
+                        class="submitform">
                 <h3>チーム情報</h3>
                 <p>エントリー時の情報と合わせてください。エントリー時の情報が分からない場合は、自動返信メールを確認してください。全角・半角に注意してください。</p>
                 <p>
@@ -66,9 +64,8 @@
                     <label for="agree">投句は、すべて自作・未発表であることを宣誓します。また、投句内容に誤りがないことを確認しました。</label>
                 </p>
                 
-                <input id="submitting" class="submit" type="submit" value="送信">
+                <input id="submitting" class="submit" type="submit" value="確認へ">
             </form>
-            <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='finish.html';}"></iframe>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="js/submit.js"></script>
