refactor: centralize form entry ids

--- a/khb2026/confirm.html
+++ b/khb2026/confirm.html
@@ -78,11 +78,11 @@
       <div class="space"></div>
       <div id="right2">
         <h3></h3>
-        <div class="right"><div id="teamname" class="kunakami"></div></div>
+        <div class="right"><div id="teamName" class="kunakami"></div></div>
       </div>
     </div>
   </section>
   <iframe name="hidden_iframe" id="hidden_iframe" style="display:none" onload="if(submitted){window.location='finish.html';}"></iframe>
-  <script src="js/confirm.js"></script>
+  <script type="module" src="js/confirm.js"></script>
 </body>
 </html>
