--- a/khb2026/confirm.html
+++ b/khb2026/confirm.html
@@ -83,6 +83,7 @@
     </div>
   </section>
   <iframe name="hidden_iframe" id="hidden_iframe" style="display:none" onload="if(submitted){window.location='finish.html';}"></iframe>
+  <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"></script>
   <script type="module" src="js/confirm.js"></script>
 </body>
 </html>
