--- a/khb2026/submit.html
+++ b/khb2026/submit.html
@@ -68,6 +68,7 @@
             </form>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"></script>
         <script type="module" src="js/submit.js"></script>
         <script src="js/submit_viewkendai.js"></script>
     </body>
