--- a/khb2026/submit.html
+++ b/khb2026/submit.html
@@ -12,9 +12,7 @@
             <h2>関西俳句バトル2026　投句フォーム</h2>
         </div>
         <div id="form">
-            <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfZNCzbTuJtXr1P0_Qb-Luii1IOVjQdGYUgpyqkdp8YxjcvbQ/formResponse?embedded=true"
-            method="POST"
-                        class="submitform">
+            <form method="POST" class="submitform" id="haiku-form">
                 <h3>チーム情報</h3>
                 <p>エントリー時の情報と合わせてください。エントリー時の情報が分からない場合は、自動返信メールを確認してください。全角・半角に注意してください。</p>
                 <p>
@@ -74,3 +72,4 @@
         <script src="js/submit_viewkendai.js"></script>
     </body>
 </html>
+
