Apply submit styles on confirm page

--- a/khb2026/confirm.html
+++ b/khb2026/confirm.html
@@ -5,6 +5,7 @@
   <title>関西俳句バトル2026　投句内容確認</title>
   <link rel="icon" href="../img/favicon.ico">
   <link rel="stylesheet" href="css/confirm.css">
+  <link rel="stylesheet" href="css/submit.css">
 </head>
 <body>
   <header>
