--- a/khb2026/confirm.html
+++ b/khb2026/confirm.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
   <title>関西俳句バトル2026　投句内容確認</title>
   <link rel="icon" href="../img/favicon.ico">
-  <link rel="stylesheet" href="css/confirm.css">
+  <link rel="stylesheet" href="confirm.css">
   <link rel="stylesheet" href="css/submit.css">
 </head>
 <body>
@@ -18,65 +19,65 @@
   <section id="top">
     <div id="wrapper">
       <div id="right2">
-        <h3>4-大将</h3>
+        <h3>大将</h3>
         <div class="right"><div id="k4_5" class="kunakami"></div></div>
       </div>
       <div id="left2">
-        <h3>4-副将</h3>
+        <h3>副将</h3>
         <div class="left"><div id="k4_4" class="kunakami"></div></div>
       </div>
       <div id="right2">
-        <h3>4-中堅</h3>
+        <h3>中堅</h3>
         <div class="right"><div id="k4_3" class="kunakami"></div></div>
       </div>
       <div id="left2">
-        <h3>4-次鋒</h3>
+        <h3>次鋒</h3>
         <div class="left"><div id="k4_2" class="kunakami"></div></div>
       </div>
       <div id="right2">
-        <h3>4-先鋒</h3>
+        <h3>先鋒</h3>
         <div class="left"><div id="k4_1" class="kunakami"></div></div>
       </div>
-      <div class="space"></div>
+      <div class="space">決勝戦</div>
       <div id="left2">
-        <h3>3-大将</h3>
+        <h3>大将</h3>
         <div class="left"><div id="k3_5" class="kunakami"></div></div>
       </div>
       <div id="right2">
-        <h3>3-中堅</h3>
+        <h3>中堅</h3>
         <div class="right"><div id="k3_3" class="kunakami"></div></div>
       </div>
       <div id="left2">
-        <h3>3-先鋒</h3>
+        <h3>先鋒</h3>
         <div class="left"><div id="k3_1" class="kunakami"></div></div>
       </div>
-      <div class="space"></div>
+      <div class="space">リーグ戦兼題③</div>
       <div id="right2">
-        <h3>2-大将</h3>
+        <h3>大将</h3>
         <div class="right"><div id="k2_5" class="kunakami"></div></div>
       </div>
       <div id="left2">
-        <h3>2-中堅</h3>
+        <h3>中堅</h3>
         <div class="left"><div id="k2_3" class="kunakami"></div></div>
       </div>
       <div id="right2">
-        <h3>2-先鋒</h3>
+        <h3>先鋒</h3>
         <div class="right"><div id="k2_1" class="kunakami"></div></div>
       </div>
-      <div class="space"></div>
+      <div class="space">リーグ戦兼題②</div>
       <div id="left2">
-        <h3>1-大将</h3>
+        <h3>大将</h3>
         <div class="left"><div id="k1_5" class="kunakami"></div></div>
       </div>
       <div id="right2">
-        <h3>1-中堅</h3>
+        <h3>中堅</h3>
         <div class="right"><div id="k1_3" class="kunakami"></div></div>
       </div>
       <div id="left2">
-        <h3>1-先鋒</h3>
+        <h3>先鋒</h3>
         <div class="left"><div id="k1_1" class="kunakami"></div></div>
       </div>
-      <div class="space"></div>
+      <div class="space">リーグ戦兼題①</div>
       <div id="right2">
         <h3></h3>
         <div class="right"><div id="teamName" class="kunakami"></div></div>
