Update stylesheet link for confirm.html

--- a/khb2026/confirm.html
+++ b/khb2026/confirm.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <title>関西俳句バトル2026　投句内容確認</title>
   <link rel="icon" href="../img/favicon.ico">
-  <link rel="stylesheet" href="confirm.css">
-  <link rel="stylesheet" href="css/submit.css">
+  <link rel="stylesheet" href="css/confirm.css">
 </head>
 <body>
   <header>
