--- a/khb2026/submit.html
+++ b/khb2026/submit.html
@@ -33,7 +33,8 @@
                 </p>
                 
                 <h3><div id="kendai2"></div></h3>
-                    <p><input id="k2_1" class="haiku" placeholder="先鋒句" required>　　<input id="k2_5_author" class="name" placeholder="作者" required><br>
+                <p>
+                    <input id="k2_1" class="haiku" placeholder="先鋒句" required>　　<input id="k2_5_author" class="name" placeholder="作者" required><br>
                     <input id="k2_3" class="haiku" placeholder="中堅句" required>　　<input id="k2_3_author" class="name" placeholder="作者" required><br>
                     <input id="k2_5" class="haiku" placeholder="大将句" required>　　<input id="k2_1_author" class="name" placeholder="作者" required>
                 </p>
@@ -72,4 +73,5 @@
         <script src="js/submit_viewkendai.js"></script>
     </body>
 </html>
+
 
