--- a/khb2026/confirm.html
+++ b/khb2026/confirm.html
@@ -37,7 +37,7 @@
         <h3>先鋒</h3>
         <div class="left"><div id="k4_1" class="kunakami"></div></div>
       </div>
-      <div class="space">決勝戦</div>
+      <div class="space"><div id="kendai4"></div></div>
       <div id="left2">
         <h3>大将</h3>
         <div class="left"><div id="k3_5" class="kunakami"></div></div>
@@ -50,7 +50,7 @@
         <h3>先鋒</h3>
         <div class="left"><div id="k3_1" class="kunakami"></div></div>
       </div>
-      <div class="space">リーグ戦兼題③</div>
+      <div class="space"><div id="kendai3"></div></div>
       <div id="right2">
         <h3>大将</h3>
         <div class="right"><div id="k2_5" class="kunakami"></div></div>
@@ -63,7 +63,7 @@
         <h3>先鋒</h3>
         <div class="right"><div id="k2_1" class="kunakami"></div></div>
       </div>
-      <div class="space">リーグ戦兼題②</div>
+      <div class="space"><div id="kendai2"></div></div>
       <div id="left2">
         <h3>大将</h3>
         <div class="left"><div id="k1_5" class="kunakami"></div></div>
@@ -76,7 +76,7 @@
         <h3>先鋒</h3>
         <div class="left"><div id="k1_1" class="kunakami"></div></div>
       </div>
-      <div class="space">リーグ戦兼題①</div>
+      <div class="space"><div id="kendai1"></div></div>
       <div id="right2">
         <h3></h3>
         <div class="right"><div id="teamName" class="kunakami"></div></div>
@@ -87,5 +87,6 @@
   <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"></script>
   <script src="js/kintou.js"></script>
   <script type="module" src="js/confirm.js"></script>
+  <script src="js/submit_viewkendai.js"></script>
 </body>
 </html>
