--- a/khb2026/confirm.html
+++ b/khb2026/confirm.html
@@ -17,67 +17,67 @@
   </header>
   <section id="top">
     <div id="wrapper">
-      <div id="right2">
+      <div class="right2">
         <h3>大将</h3>
         <div class="right"><div id="k4_5" class="kunakami"></div></div>
       </div>
-      <div id="left2">
+      <div class="left2">
         <h3>副将</h3>
         <div class="left"><div id="k4_4" class="kunakami"></div></div>
       </div>
-      <div id="right2">
+      <div class="right2">
         <h3>中堅</h3>
         <div class="right"><div id="k4_3" class="kunakami"></div></div>
       </div>
-      <div id="left2">
+      <div class="left2">
         <h3>次鋒</h3>
         <div class="left"><div id="k4_2" class="kunakami"></div></div>
       </div>
-      <div id="right2">
+      <div class="right2">
         <h3>先鋒</h3>
         <div class="left"><div id="k4_1" class="kunakami"></div></div>
       </div>
       <div class="space"><div id="kendai4"></div></div>
-      <div id="left2">
+      <div class="left2">
         <h3>大将</h3>
         <div class="left"><div id="k3_5" class="kunakami"></div></div>
       </div>
-      <div id="right2">
+      <div class="right2">
         <h3>中堅</h3>
         <div class="right"><div id="k3_3" class="kunakami"></div></div>
       </div>
-      <div id="left2">
+      <div class="left2">
         <h3>先鋒</h3>
         <div class="left"><div id="k3_1" class="kunakami"></div></div>
       </div>
       <div class="space"><div id="kendai3"></div></div>
-      <div id="right2">
+      <div class="right2">
         <h3>大将</h3>
         <div class="right"><div id="k2_5" class="kunakami"></div></div>
       </div>
-      <div id="left2">
+      <div class="left2">
         <h3>中堅</h3>
         <div class="left"><div id="k2_3" class="kunakami"></div></div>
       </div>
-      <div id="right2">
+      <div class="right2">
         <h3>先鋒</h3>
         <div class="right"><div id="k2_1" class="kunakami"></div></div>
       </div>
       <div class="space"><div id="kendai2"></div></div>
-      <div id="left2">
+      <div class="left2">
         <h3>大将</h3>
         <div class="left"><div id="k1_5" class="kunakami"></div></div>
       </div>
-      <div id="right2">
+      <div class="right2">
         <h3>中堅</h3>
         <div class="right"><div id="k1_3" class="kunakami"></div></div>
       </div>
-      <div id="left2">
+      <div class="left2">
         <h3>先鋒</h3>
         <div class="left"><div id="k1_1" class="kunakami"></div></div>
       </div>
       <div class="space"><div id="kendai1"></div></div>
-      <div id="right2">
+      <div class="right2">
         <h3></h3>
         <div class="right"><div id="teamName" class="kunakami"></div></div>
       </div>
