Fix confirm button visibility

--- a/khb2026/submit.html
+++ b/khb2026/submit.html
@@ -63,7 +63,7 @@
                     <label for="agree">投句は、すべて自作・未発表であることを宣誓します。また、投句内容に誤りがないことを確認しました。</label>
                 </p>
                 
-                <input id="submitting" class="submit" type="submit" value="確認へ">
+                <input id="submitting" class="submit" type="submit" value="確認画面へ">
             </form>
 
         </div>
